[package]
name = "hot-complexity"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.3"
imageproc = "0.23.0"
ndarray = "0.15.6"
nalgebra = "0.31"
cv-convert = "0.21.2" 
opencv = "0.74.0"
image = "0.24.5"
nshare = "0.9.0"
rand = "0.8.5"
polars = {version="0.25.1",  features = ["lazy"] }